# CMake

./: .gitignore  CMakeLists.txt  README.md  main.cpp  记录
add/: CMakeLists.txt  add.cpp  add.h
app/: CMakeLists.txt  main.cpp
include/: add.h
lib/: CMakeLists.txt
lib/src/: add.cpp  sub.cpp
libs/algorithm/: CMakeLists.txt
libs/algorithm/include/: add.h
libs/algorithm/src/: add.cpp
libs/network/: CMakeLists.txt
libs/network/src/: math.cpp
src/: add.cpp  main.cpp  math.cpp  math.h
sub/: CMakeLists.txt  sub.cpp  sub.h
tests/: CMakeLists.txt  test_algorithm.cpp
